<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/imageSize"
                android:layout_height="@dimen/imageSize"
                android:src="@drawable/tottenham"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/basic"
            android:textSize="23sp"
            android:paddingTop="15dp"
            android:text="@string/tottenham_hotspur"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/footbal_club"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_172"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24k"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_305"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@color/light_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:text="@string/footballers"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/imSize"
                        android:layout_height="@dimen/imSize"
                        android:padding="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/harry"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txtSize"
                    android:text="@string/kane"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/imSize"
                        android:layout_height="@dimen/imSize"
                        android:padding="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/son"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txtSize"
                    android:text="@string/son"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/imSize"
                        android:layout_height="@dimen/imSize"
                        android:padding="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dele"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txtSize"
                    android:text="@string/dele"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/purple_700"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="@dimen/imSize"
                        android:layout_height="@dimen/imSize"
                        android:padding="10dp"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="+"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>
            <include
                layout="@layout/include_layout"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>


    <!--<com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="65dp"-->
    <!--android:layout_gravity="bottom"-->
    <!--app:itemIconSize="35sp"-->
    <!--app:itemIconTint="@color/purple_700"-->
    <!--app:itemTextColor="@color/purple_700"-->
    <!--app:menu="@menu/menu" />-->
